Proposal: reflection rephrased

--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -291,8 +291,9 @@ extension.
 
 One major limitation of analysis by bytecode instrumentation is that it 
 cannot easily deal with reflection or dynamically loaded code. The core
-project will simply warn the user that these are present, but a possible
-extension could further explore methods of dealing with such calls.
+project will simply warn the user that these are present in the processed
+code, but a possible extension could further explore methods of dealing 
+with such calls.
 
 \subsubsection*{Mocking}
 
