--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -358,10 +358,15 @@ must be designed and implemented.
 	      a DEX file, be able to copy its content into a new DEX file}
 	\item{\textbf{Fortnight 2:} Instrumentation of trivial instructions;
 	      specification and identification of sources and sinks}
-	\item{\textbf{Fortnight 3:} Static analysis of exceptions and their 
-	      instrumentation; extra time for testing}
+	\item{\textbf{Fortnight 3:} Static analysis and instrumentation of 
+	      exceptions; time for testing}
 	\item{\textbf{Fortnight 4:} Implicit-flow instrumentation; assess 
-	      the impact of implicit-flow analysis}
+	      its impact}
+	\item{\textbf{Fortnight 5:} Performance optimisations}
+	\item{\textbf{Fortnight 6:} Causality analysis}
+	\item{\textbf{Fortnight 7:} Graphical user interface}
+	\item{\textbf{Fortnight 8:} Large-scale testing and evaluation}
+	\item{\textbf{Rest:} Dissertation}
 \end{itemize}
 
 \printbibliography
